force-app/main/default/objects/Activity/fields/Gong__Associated_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Gong__Associated_Accounts__c</fullName>
    <label>Associated Accounts</label>
    <type>TextArea</type>
</CustomField>