force-app/main/default/objects/Activity/fields/Gong__Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Gong__Call_Outcome__c</fullName>
    <label>Call Outcome (AI)</label>
    <type>TextArea</type>
</CustomField>