force-app/main/default/objects/Activity/fields/Gong__Meeting_Prospect_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Gong__Meeting_Prospect_Canceled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meeting Canceled by Prospect</label>
    <type>Checkbox</type>
</CustomField>